--- a/tests/go/CMakeLists.txt
+++ b/tests/go/CMakeLists.txt
@@ -1,3 +1,6 @@
+set(GOARCH_TRANSLATE_x86_64 amd64)
+set(GOARCH_TRANSLATE_i386 386)
+
 function(build_test target_test enable_pie)
     set(TARGET ${target_test}-go-${enable_pie})
     set(SRC_FILE ${CMAKE_CURRENT_SOURCE_DIR}/${target_test}.go)
@@ -8,14 +11,18 @@ function(build_test target_test enable_pie)
             OUTPUT ${TARGET_FILE}
             DEPENDS ${SRC_FILE}
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-            COMMAND go build -o ${TARGET_FILE} ${SRC_FILE}
+            COMMAND env GOOS=linux GOARCH=${GOARCH_TRANSLATE_${ARCH}}
+                CC=${CMAKE_C_COMPILER} CXX=${CMAKE_CXX_COMPILER}
+                go build -o ${TARGET_FILE} ${SRC_FILE}
         )
     else()
         add_custom_command(
             OUTPUT ${TARGET_FILE}
             DEPENDS ${SRC_FILE}
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-            COMMAND go build -o ${TARGET_FILE}
+            COMMAND env GOOS=linux GOARCH=${GOARCH_TRANSLATE_${ARCH}} CGO_ENABLED=1
+                CC=${CMAKE_C_COMPILER} CXX=${CMAKE_CXX_COMPILER}
+                go build -o ${TARGET_FILE}
                 -ldflags "-linkmode external -s -w -extldflags -static-pie"
                 -buildmode=pie -tags static_build ${SRC_FILE}
         )
